realigned landscape content to fix appearance

--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body{
         grid-template-rows:auto; */
         background-color: white;
         width:100vw;
-        height:50vh;
+        height:60vh;
         justify-self: start;
         
     }
@@ -71,7 +71,7 @@ body{
         background-color: rgba(0, 0, 0, 0.274);
         font-size:15px;
         width:100vw;
-        bottom:12vh;
+        bottom:12.5vh;
     }
     
     .summary{
@@ -79,7 +79,7 @@ body{
         background-color:rgba(0, 0, 0, 0.274);
         font-size: 12px;
         position: relative;
-        bottom: 14.5vh;
+        bottom: 15vh;
         text-align: start;
         width:100vw;
     }
@@ -115,8 +115,8 @@ body{
     .navdots{
         display:flex;
         justify-content: center;
-        position:absolute;
-        bottom:25vh;
+        position:relative;
+        bottom:29vh;
     }
     .dot{
         border-radius: 50%;
@@ -145,8 +145,8 @@ body{
         font-size: 10px;
         text-align: center;
         width: 100vw;
-        height:5vh;
-        margin-top:10vh;
+        height:10vh;
+        margin-top:5vh;
         align-self:end;
     }
 }
@@ -155,7 +155,7 @@ body{
 /*  */
 
 /* Landscape phone layout */
-@media screen and (min-width:501px;) and  (max-width:550px){
+@media screen and (orientation:landscape) and  (max-width:550px){
     body{
         height:100vh;
         width:100vw;
@@ -164,8 +164,10 @@ body{
 
     #app{
         display: grid;
-        grid-template-columns:500px;
+        grid-template-columns:100px 200px;
         grid-template-rows: repeat(4, auto);
+        width:100vw;
+        height:100vh;
     }
 
     /* header area */
@@ -180,7 +182,8 @@ body{
         grid-area:2/1/2/1;
         background-color: rgb(2, 80, 126);
         width:100vw;
-        height:20px;
+        height:5vh;
+        padding-bottom: 4bh;
     }
 
     button{
@@ -195,18 +198,19 @@ body{
     }
     /* content area */
     #content{
-        grid-area:3/1/3/1;
+        grid-area:3/1/3/2;
         /* display:grid;
         grid-template-columns:auto;
         grid-template-rows:auto; */
         background-color: white;
+        justify-self: start;
         width:100vw;
         height:100vh;
     }
 
     .image{
-        height:125px;
-        width:200px;
+        height:50vh;
+        width:100vw;
     } 
 
     .imageTitle{
@@ -214,24 +218,25 @@ body{
         position: relative;
         background-color: rgba(0, 0, 0, 0.274);
         font-size:15px;
-        width:200px;
-        bottom:57px;
+        width:60vw;
+        bottom:60px;
     }
     
     .summary{
         color: white;
         background-color:rgba(0, 0, 0, 0.274);
         font-size: 10px;
-        position: absolute;
-        bottom: 21px;
+        position: relative;
+        height:10vh;
+        bottom:23vh;
         /* text-align: center; */
-        width:200px;
+        width:60vw;
     }
 
     #homeText{
-        font-size: 8px;
+        font-size: 12px;
         position: relative;
-        top: 40px;
+        width:90vw;
     }
 
     .fade{
@@ -265,8 +270,8 @@ body{
     .navdots{
         display:flex;
         justify-content: center;
-        position:absolute;
-        bottom:10px;
+        position:relative;
+        bottom:50vh;
     }
     .dot{
         border-radius: 50%;
@@ -290,7 +295,7 @@ body{
         font-size: 10px;
         text-align: center;
         width: 100vw;
-        height:100vh;
+        height:10vh;
         align-self:end;
     }
 }
@@ -318,9 +323,10 @@ body{
     /* header area */
     #title{
         background-color: rgb(166, 166, 255);
-        grid-area:1/1/1/1;
+        grid-area:1/1/1/2;
         width:100vw;
         font-size:10px;
+        text-align: center;
     }
 
     #header{
